# paddleocr-starter

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/: pyproject.toml
backend/app/: __init__.py  errors.py  exporter.py  form_exporter.py  layout_exporter.py  main.py  models.py  ocr.py
backend/app/templates/: __init__.py  transformer_short_circuit.py
backend/tests/: test_api_export.py  test_api_form_export.py  test_api_layout_export.py  test_api_recognize.py  test_exporter.py  test_form_exporter.py  test_layout_exporter.py  test_templates.py
docs/superpowers/plans/: 2026-06-14-paddleocr-web-excel.md
docs/superpowers/specs/: 2026-06-14-paddleocr-web-excel-design.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  api.ts  styles.css  types.ts
src/paddleocr_starter/: __init__.py  api.py  cli.py  ocr.py
