[project]
name = "paddleocr-web-excel-backend"
version = "0.1.0"
description = "Local PaddleOCR web backend for recognizing transformer test record photos and exporting Excel workbooks."
requires-python = ">=3.10,<3.13"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "python-multipart",
  "pydantic",
  "pillow",
  "openpyxl",
  "opencv-python-headless",
  "paddleocr",
  "paddlepaddle"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "httpx"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
